--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <body>
 
 <article>
-<h1> Welcome to the digital GANG NEST !!!!</h1> /* Different title picture logo things throughout the days and events*/<p> This is the digital foot print of active human bodies.  What we are doing is simply ATTEMPTING the process of life
+<h1> Welcome to the digital GANG NEST !!!!</h1> /* Different title picture logo things throughout the days and events and individual mood settings*/<p> This is the digital foot print of active human bodies.  What we are doing is simply ATTEMPTING the process of life
 within in this universal hanging out and doing stuff world.   
